--- a/WZ/Docs/paper.bib
+++ b/WZ/Docs/paper.bib
@@ -1,9 +1,20 @@
 @article{noi,
-      author         = "Melia, Tom and Nason, Paolo and Rontsch, Raoul and Zanderighi, Giulia",
+      author         = "Melia, Tom and Nason, Paolo and Rontsch, Raoul and
+                        Zanderighi, Giulia",
+      title          = "{W+W-, WZ and ZZ production in the POWHEG BOX}",
+      journal        = "JHEP",
+      volume         = "1111",
+      pages          = "078",
+      doi            = "10.1007/JHEP11(2011)078",
+      year           = "2011",
+      eprint         = "1107.5051",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1107.5051;%%",
 }
 
 @article{Campbell:1999ah,
-      author         = "Campbell, John M. and Ellis, R.Keith",
+      author         = "Campbell, John M. and Ellis, R. Keith",
       title          = "{An Update on vector boson pair production at hadron
                         colliders}",
       journal        = "Phys.Rev.",
@@ -15,15 +26,21 @@
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ph",
 }
+
 @article{Campbell:2011bn,
-      author         = "Campbell, John M. and Ellis, R.Keith and Williams,
+      author         = "Campbell, John M. and Ellis, R. Keith and Williams,
                         Ciaran",
       title          = "{Vector boson pair production at the LHC}",
+      journal        = "JHEP",
+      volume         = "1107",
+      pages          = "018",
+      doi            = "10.1007/JHEP07(2011)018",
       year           = "2011",
-      note           = "* Temporary entry *",
-      eprint         = "arXiv:1105.0020",
+      eprint         = "1105.0020",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ph",
+      reportNumber   = "FERMILAB-PUB-11-182-T",
+      SLACcitation   = "%%CITATION = ARXIV:1105.0020;%%",
 }
 
 @article{Dixon:1998py,
@@ -32,7 +49,7 @@
                         W^{-}$, $W^\pm Z$, $Z Z$, $W^\pm \gamma$, or $Z \gamma$
                         pairs at hadron colliders}",
       journal        = "Nucl.Phys.",
-1      volume         = "B531",
+      volume         = "B531",
       pages          = "3-23",
       doi            = "10.1016/S0550-3213(98)00421-0",
       year           = "1998",
@@ -40,6 +57,7 @@
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ph",
 }
+
 
 @Article{Dixon:1999di,
      author    = "Dixon, Lance J. and Kunszt, Z. and Signer, A.",
@@ -55,3 +73,5 @@
      doi       = "10.1103/PhysRevD.60.114037",
      SLACcitation  = "%%CITATION = HEP-PH/9907305;%%"
 }
+
+
