--- a/ZZ/Docs/paper.bib
+++ b/ZZ/Docs/paper.bib
@@ -14,7 +14,7 @@
 }
 
 @article{Campbell:1999ah,
-      author         = "Campbell, John M. and Ellis, R.Keith",
+      author         = "Campbell, John M. and Ellis, R. Keith",
       title          = "{An Update on vector boson pair production at hadron
                         colliders}",
       journal        = "Phys.Rev.",
@@ -25,6 +25,22 @@
       eprint         = "hep-ph/9905386",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ph",
+}
+
+@article{Campbell:2011bn,
+      author         = "Campbell, John M. and Ellis, R. Keith and Williams,
+                        Ciaran",
+      title          = "{Vector boson pair production at the LHC}",
+      journal        = "JHEP",
+      volume         = "1107",
+      pages          = "018",
+      doi            = "10.1007/JHEP07(2011)018",
+      year           = "2011",
+      eprint         = "1105.0020",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "FERMILAB-PUB-11-182-T",
+      SLACcitation   = "%%CITATION = ARXIV:1105.0020;%%",
 }
 
 @article{Dixon:1998py,
@@ -43,19 +59,19 @@
 }
 
 
-@article{Campbell:2011bn,
-      author         = "Campbell, John M. and Ellis, R. Keith and Williams,
-                        Ciaran",
-      title          = "{Vector boson pair production at the LHC}",
-      journal        = "JHEP",
-      volume         = "1107",
-      pages          = "018",
-      doi            = "10.1007/JHEP07(2011)018",
-      year           = "2011",
-      eprint         = "1105.0020",
-      archivePrefix  = "arXiv",
-      primaryClass   = "hep-ph",
-      reportNumber   = "FERMILAB-PUB-11-182-T",
-      SLACcitation   = "%%CITATION = ARXIV:1105.0020;%%",
+@Article{Dixon:1999di,
+     author    = "Dixon, Lance J. and Kunszt, Z. and Signer, A.",
+     title     = "{Vector boson pair production in hadronic collisions at
+                  order alpha(s): Lepton correlations and anomalous
+                  couplings}",
+     journal   = "Phys. Rev.",
+     volume    = "D60",
+     year      = "1999",
+     pages     = "114037",
+     eprint    = "hep-ph/9907305",
+     archivePrefix = "arXiv",
+     doi       = "10.1103/PhysRevD.60.114037",
+     SLACcitation  = "%%CITATION = HEP-PH/9907305;%%"
 }
+
 
