--- a/disquark/Doc/sq_manual.tex
+++ b/disquark/Doc/sq_manual.tex
@@ -1,7 +1,7 @@
 \documentclass[a4paper,11pt]{article}
 \usepackage{amssymb,enumerate}
 \usepackage{amsmath}
-\usepackage{bbm}
+%\usepackage{bbm}
 \usepackage{url}
 \usepackage{cite}
 \usepackage{graphics}
@@ -70,7 +70,7 @@
 \maketitle
 %
 \noindent
-This manual summarizes the parameters which are specific to the implementation of squark antisquark and squark pair production and decays in the \PB~framework. More details on the implementation of these processes can be found in~\cite{ownpaper} and~\cite{owndiss}. For a summary of the parameters which are common to all processes included in the \PB~see the main manual. 
+This manual summarizes the parameters which are specific to the implementation of squark antisquark and squark pair production and decays in the \PB~framework. More details on the implementation of these processes can be found in~\cite{ownpaper} and~\cite{owndiss}. For a summary of the parameters which are common to all processes included in the \PB~see the main manual. If you use our code please cite \cite{ownpaper}.
 
 \section*{Compiling the program}
 The squark antisquark and squark pair production processes are implemented as two independent programs. The respective process-dependent routines can be found in the subfolders {\tt squark\_squark} and {\tt squark\_antisquark}, which contain each a sample  {\tt makefile}. In order to generate the executables change into the respective folder and run 
