ST_tch_4f: migration to V2
git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@2951 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/ST_tch_4f/Docs/manual-BOX-ST_tch_4f.tex
+++ b/ST_tch_4f/Docs/manual-BOX-ST_tch_4f.tex
@@ -32,7 +32,8 @@
 \author{Emanuele Re\\
   Institute for Particle Physics Phenomenology, Department of Physics\\
   University of Durham, Durham, DH1 3LE, UK\\
-  E-mail: \email{emanuele.re@durham.ac.uk}}
+  E-mail: \email{emanuele.re@durham.ac.uk}\\
+  New-e-mail: \email{emanuele.re@physics.ox.ac.uk}\\}
 
 \vskip -0.5truecm
 
@@ -44,7 +45,7 @@
   Monte Carlo programs, in such a way that both NLO and shower
   accuracy are maintained.  Please read carefully the manual before
   using this code.}  \preprint{\today\\
-  \tmtexttt{POWHEG BOX} 1.0}
+  \tmtexttt{POWHEG BOX} 2.0}
 
 \begin{document}
 
@@ -67,7 +68,10 @@ Authors and Users'' and can be found at the web page \\
 %
 In the following we will focus on the implementation of single-top
 $t$-channel production in the $4$-flavour scheme, whose source files
-can be found in the \tmtexttt{POWHEG-BOX/ST\_tch\_4f} subdirectory.
+can be found within the available processes under the
+\tmtexttt{User-Processes-V2} directory, where all processes
+implemented or migrated to \tmtexttt{POWHEG-BOX-V2} can be found.
+%in the \tmtexttt{POWHEG-BOX/ST\_tch\_4f} subdirectory.
 
 This program is an implementation of the NLO cross section calculated
 in~\cite{Campbell:2009ss} in the \POWHEG{} formalism of
