DYNNLOPS: removed fewz patches from public directory, small improvements 	  in the manual.
git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@2960 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/DYNNLOPS/Docs/dynnlops.tex
+++ b/DYNNLOPS/Docs/dynnlops.tex
@@ -54,7 +54,7 @@
 
 
 
-\title{{NNLOPS accurate Drell Yan production}}
+\title{{NNLOPS accurate Drell-Yan production}}
 
 % more complex case: 4 authors, 3 institutions, 2 footnotes
 \author[a]{Alexander Karlberg,}
@@ -86,12 +86,14 @@ Division, CERN,\\CH--1211, Geneva 23, Switzerland}
 
 \section{Introduction}
 
-These instructions explain how to use the code in the {\tt{ZJ/DYNNLOPS}} and {\tt{WJ/DYNNLOPS}}
-directories, upgraded with the {\tt MiNLO} procedure, in conjunction with the \DYNNLO{} program to get NNLO accuracy for inclusive Drell Yan production. As there is no fundamental difference between obtaining \NNLOPS accurate results for Z and W production from this code, we will here give instructions for the case of V production, where V denotes either Z or W. 
+This manual explains how to run the code (that makes use of the {\tt
+  MiNLO} procedure) in the {\tt{Zj/DYNNLOPS}} and {\tt{Wj/DYNNLOPS}}
+directories, in conjunction with the \DYNNLO{} program, to get
+\NNLOPS{} accuracy for inclusive Drell-Yan production.
 
-In order to obtain the needed source code, the user has to download the {\tt DYNNLOPS} directory from the ZJ or WJ main directory, using the following command
+In order to obtain the needed source code, the user has to download the {\tt DYNNLOPS} directory from the {\tt Zj} or {\tt Wj} main directory, using the following command
 
-{\tt svn co [--revision n] --username anonymous --password anonymous \textbackslash
+{\tt svn co [---revision n] ---username anonymous ---password anonymous \textbackslash
 
 \hspace{1cm} svn://powhegbox.mib.infn.it/trunk/User-Processes-V2/DYNNLOPS} . 
 
@@ -104,14 +106,20 @@ The {\tt DYNNLOPS} directory contains five folders
 \item {\tt WNNLOPS} and {\tt ZNNLOPS}: directories containing files specific of W or Z production. 
 \end{itemize}
 
+As there is no fundamental difference between obtaining \NNLOPS{}
+accurate results for Z and W production using this code, in the
+following we will give instructions for the case of Z production. For
+the W case, the commands listed in the rest of this document need to be
+changed straightforwardly.
+
 
 \section{NNLO input\label{sec:NNLO-ingredients}}
 A fundamental  ingredient required to obtain NNLO accurate
 event samples is a triple differential distribution for the Z boson Born kinematics.\footnote{
 In this case the Born kinematics is fully specified in terms of the
 rapidity of the boson, an (arbitrary) angle describing the final state leptons and the invariant mass of the lepton pair.} We here give instructions on how to obtain
-such distributions, in a format suitable for upgrading the \VJMINLO{}
-events via the {\tt{VJ/DYNNLOPS}} reweighting code.
+such distributions, in a format suitable for upgrading the \ZJMINLO{}
+events via the {\tt{Zj/DYNNLOPS}} reweighting code.
 
 \begin{enumerate}
 
@@ -120,7 +128,7 @@ events via the {\tt{VJ/DYNNLOPS}} reweighting code.
 {\url{https://lhapdf.hepforge.org}}\\
 In particular, for the installation of \DYNNLO{},
 the command {\tt{lhapdf-config ---libdir}} should return the 
-location of the installed {\noun{Lhapdf}} libraries.
+location of the installed {\noun{LHAPDF}} libraries.
 
 \item Download \DYNNLO{} from the following URL:\\
 \hspace*{5mm}
@@ -178,17 +186,17 @@ The first file contains one-dimensional distributions which can be used for phen
 %different only by the value of the random seed may be combined to increase
 %the statistical precision. Statistically equivalent histogram files may be
 %combined with the mergedata program:\\
-Changing the random seed {\tt rseed} for each run. To combine the runs we provide a fortran program, merge3ddata.f, in the {\tt aux} folder.  
+Changing the random seed {\tt rseed} for each run. To combine the runs we provide a fortran program, {\tt merge3ddata.f}, in the {\tt aux} folder.  
 As it can use big amounts of memory, we recommend compiling with the following flags
 
 \hspace*{5mm}{\tt{\$ gfortran -mcmodel=medium -o merge3ddata merge3ddata.f }}
 
-To then merge the nnlo3D.top files into a file called dynnlo.top do the following
+To then merge the {\tt nnlo3D.top} files into a file called {\tt dynnlo.top} do the following
 
 \hspace*{5mm}{\tt{\$ ./merge3ddata 1 file\_1.top ... file\_N.top}}\\
 \hspace*{5mm}{\tt{\$ mv fort.12 dynnlo.top}}\vspace{3mm}\\
 %
-We would like to note here, that due to the way \DYNNLO{} computes the real contribution of the cross-section, the errors of the nnlo3D.top files (and nnlo.top) are not reliable. In order to asses the precision on the three dimensional distributions, we provide a script, 3dto1d.f, which will integrate the three-dimensional distribution into three one-dimensional distributions. After compilation it is run by
+We would like to note here that, due to the way \DYNNLO{} computes the real contribution of the cross-section, the errors of the {\tt nnlo3D.top} files (and {\tt nnlo.top}) are not reliable. In order to asses the precision on the three dimensional distributions, we provide a small program, {\tt 3dto1d.f}, which will integrate the three-dimensional distributions into three one-dimensional distributions. After compilation it is run by
 
 \hspace*{5mm}{\tt{\$ ./3dto1d dynnlo.top}}
 
@@ -204,7 +212,7 @@ In the case where a user might not be interested in high rapidity events, it is 
 \section{{\noun{Zj-MiNLO}} events\label{sub:HJ-MINLO-ingredients}}
 
 The other fundamental ingredient needed for the NNLO reweighting procedure are  \ZJMINLO{} Les Houches events. A few modifications of the standard code are needed to obtain three-dimensional distributions and  to maintain
-consistency of the physical parameters in \DYNNLO{} and \ZJMINLO{}.  In order to include them, it is sufficient to replace the default {\ttfamily POWHEG} file with the patched one:\vspace{3mm}\\
+consistency of the physical parameters in \DYNNLO{} and \ZJMINLO{}.  In order to include them, it is sufficient to replace the default {\ttfamily POWHEG} makefile with the patched one:\vspace{3mm}\\
 \hspace*{5mm} {\tt{\$ cp DYNNLOPS/ZNNLOPS/powheg-patches/powheg.makefile ./makefile}}\vspace{3mm}\\
 In {\tt{DYNNLOPS/ZNNLOPS/powheg-patches/powheg.input}} a template input file can also be found. If the code is run with the patches out of the box and the above input file, consistency between \DYNNLO{} and \ZJMINLO{} should be achieved. 
 However, we stress again that it is up to the user to make sure this is the case.
@@ -216,9 +224,10 @@ Few comments are helpful:
 \item  A large number of physical parameters used by the \ZJMINLO{} code,
   such as the Fermi constant, are assigned by the subroutine
   {\tt{init\_couplings}}
-  defined in file\linebreak {\tt{Zj/init\_couplings.f}}. As in the case of
-  the \DYNNLO{} {\tt{mdata.f}} file, some of the parameters in this file are
-  irrelevant. Nevertheless, in {\tt{Zj/DYNNLOPS/ZNNLOPS/powheg.input}} all these parameters can be changed. The version we provide is consistent with our version of mdata.f
+  defined in the file\linebreak {\tt{Zj/init\_couplings.f}}. As in the case of
+  the \DYNNLO{}\ \  {\tt{mdata.f}} file, some of the parameters in this file are
+  irrelevant. Nevertheless, in {\tt{Zj/DYNNLOPS/ZNNLOPS/powheg.input}} all these parameters can be changed. The version we provide is consistent with our patched 
+  version of {\tt mdata.f}
 
  \item For detailed instructions
   on setting up the \ZJMINLO{} program to perform numerous runs in parallel
@@ -263,7 +272,7 @@ with $h$ a monotonic profile function
 h(\pt)=\frac{(\hc\, m_{{\scriptscriptstyle \mathrm{V}}})^{2}}{(\hc\, m_{{\scriptscriptstyle \mathrm{V}}})^{2}+\pt^{2}},\label{eq:NNLOPS-hpT-fn-defn}
 \end{equation}
 and $\hc$ a constant parameter. 
-On convoluting $\mathcal{W}\left(\Phi_B,\, \pt\right)$ with the \ZJMINLO{} differential cross section
+On convoluting $\mathcal{W}\left(\Phi_B,\, \pt\right)$ with the \VJMINLO{} differential cross section
 and integrating over $\pt$ one finds, exactly,
 \begin{eqnarray}
 \left(\frac{d\sigma}{d\Phi_B}\right)^{{\scriptscriptstyle \mathrm{NNLOPS}}} & = & \left(\frac{d\sigma}{d\Phi_B}\right)^{{\scriptscriptstyle \mathrm{NNLO}}}\,.\label{eq:NNLOPS-NNLOPS-eq-NNLO_0+MINLO_1-1}
@@ -277,7 +286,7 @@ parameter within it, is, roughly speaking, to determine how to spread out
 the NLO-to-NNLO corrections along the $\pt$ axis. For
 $\hc=\infty$ the corrections are spread uniformly in $\pt$ (see e.g.
 fig.~3 of ref.~\cite{Hamilton:2013fea}), while for $\hc=1$
-they are concentrated in the region $\pt<\hc\,m_Z$. In the latter
+they are concentrated in the region $\pt<\hc\,m_V$. In the latter
 respect the $\hc$ parameter plays a similar role to the resummation
 scale in dedicated resummation calculations, and as such we favour 
 that $\hc$ be set consistently with the preferred values in those.
@@ -295,7 +304,8 @@ be used to `tune' the \NNLOPS{} simulation (in particular the $\hc$
 parameter) to approximate the yet higher order, large logarithmic, terms
 which it does not take into account. Setting $\hc=1$ appears
 to do a very good job in this respect, thus it is the default, recommended,
-value in the following. If the reweighting is performed using eq.~\eqref{eq:Wdef}, the value of $\beta$ can be changed by just modifying in a straightforward way the file {\tt get\_zdamp.f}. 
+value in the following. If the reweighting is performed using eq.~\eqref{eq:Wdef}, the value of $\beta$ can be changed by just 
+modifying in a straightforward way the file {\tt get\_zdamp.f} ({\tt get\_wdamp.f} for W production). 
 
 
 \subsection{A simple run\label{sec:simple-reweighting}} 
@@ -318,22 +328,22 @@ be run with the following command line:
 where {\tt ZjMiNLO-eventfile} is a LH file (suffix {\tt .lhe})
 containing events produced with \ZJMINLO{}, obtained as described in
 sec.~\ref{sub:HJ-MINLO-ingredients}, 
-{\tt nr-DYNNLOfiles} denotes the number of DYNNLO files containing the 3D distributions (more then one is needed for instance when commuting uncertainty bands using scale variation), {\tt DYNNLO-file*} are output files of {\tt DYNNLO},  computed as described in sec~\ref{sec:NNLO-ingredients}. The number of files given in the input line must correspond to {\tt nr-DYNNLOfiles}. Finally, {\tt ZjMiNLO-file*} contain three-dimensional histograms  computed using {\tt ZJ-MiNLO} events. These last arguments are optional. If these files are not present in the command line, the reweighing program computes them and stops. We call this stage one. When the {\tt ZjMiNLO-file*} are computed by the reweighing program using the {\tt ZjMiNLO-eventfile}, the first weight present in the LHE file will produce a file called {\tt MINLO-W1-denom.top}, the second weight a file called {\tt MINLO-W2-denom.top} and so on. 
+{\tt nr-DYNNLOfiles} denotes the number of {\tt DYNNLO} files containing the 3D distributions (more then one is needed for instance when computing uncertainty bands using scale variation), {\tt DYNNLO-file*} are output files of {\tt DYNNLO},  computed as described in sec~\ref{sec:NNLO-ingredients}. The number of files given in the input line \emph{must} correspond to {\tt nr-DYNNLOfiles}. Finally, {\tt ZjMiNLO-file*} contain three-dimensional histograms  computed using {\tt ZJ-MiNLO} events. These last arguments are optional. If these files are not present in the command line, the reweighing program computes them and stops. We call this stage one. When the {\tt ZjMiNLO-file*} are computed by the reweighing program using the {\tt ZjMiNLO-eventfile}, the first weight present in the LHE file will produce a file called {\tt MINLO-W1-denom.top}, the second weight a file called {\tt MINLO-W2-denom.top} and so on. 
 
-Rather then producing just one huge event file, it is also possible to compute the {\tt MINLO-W*-denom.top} files on each event sample and then combine the resulting distributions using the program merge3ddata (in {\tt aux}).\footnote{In this case, care has to be take to produce files in different directories.} 
+Rather than producing just one huge event file, it is also possible to compute the {\tt MINLO-W*-denom.top} files on each event sample and then combine the resulting distributions using the program {\tt merge3ddata.f} (in {\tt aux}).\footnote{In this case, care has to be take to produce files in different directories.} 
 With the generated {\tt MINLO-W*-denom.top} files one can then go on and perform the actual NNLO reweighing including in the command line these files. We call this stage two. The files \emph{have} to be given in the same order as the corresponding weights in the LH file. Otherwise the reweighting will be incorrect. 
 
-Here follows an example on how to go through both stages, assuming that the user has a \ZJMINLO{} event file called {\tt pwgevents.lhe} containing 7 weights and 3 \DYNNLO{} files called {\tt dynnlo-mur0.5-muf0.5.top}, {\tt dynnlo-mur1.0-muf1.0.top} and {\tt dynnlo-mur2.0-muf2.0.top}, the program should be called as\vspace{3mm}\\
+Here follows an example on how to go through both stages, assuming that the user has a \ZJMINLO{} event file called {\tt pwgevents.lhe} containing 7 weights and 3 \DYNNLO{} files called {\tt dynnlo-mur0.5-muf0.5.top}, {\tt dynnlo-mur1.0-muf1.0.top} and {\tt dynnlo-mur2.0-muf2.0.top}. The program should be called as\vspace{3mm}\\
 \hspace*{5mm}{\tt \$./minnlo pwgevents.lhe 3 dynnlo-mur0.5-muf0.5.top  \textbackslash }
 
 \hspace*{5mm} {\tt  dynnlo-mur1.0-muf1.0.top dynnlo-mur2.0-muf2.0.top}\vspace{3mm}\\
 This will result in an output of {\tt MINLO-W1-denom.top}, {\tt MINLO-W2-denom.top}, {\tt MINLO-W3-denom.top}, {\tt MINLO-W4-denom.top}, {\tt MINLO-W5-denom.top}, {\tt MINLO-W6-denom.top}, {\tt MINLO-W7-denom.top}.\\
 
 To perform stage two the user would run \vspace{3mm}\\
-\hspace*{5mm}{\tt \$./minnlo pwgevents2.lhe 3  dynnlo-mur0.5-muf0.5.top  \textbackslash }
+\hspace*{5mm}{\tt \$./minnlo pwgevents.lhe 3  dynnlo-mur0.5-muf0.5.top  \textbackslash }
 
 \hspace*{5mm} {\tt dynnlo-mur1.0-muf1.0.top dynnlo-mur2.0-muf2.0.top MINLO-W*-denom.top}\vspace{3mm}\\
-which will produce a file called {\tt pwgevents.lhe-nnlo}. This LH file is the final output of the {\tt MiNNLO} NLO-to-NNLO reweighter program, and can now be read and
+which will produce a file called {\tt pwgevents.lhe-nnlo}.\footnote{As usual, the shell will match and expand {\tt MINLO-W*-denom.top} to the list of files {\tt MINLO-W1-denom.top}, {\tt MINLO-W2-denom.top},..., {\tt MINLO-W7-denom.top}, which is the actual input read by the {\tt minnlo} program.} This LH file is the final output of the {\tt minnlo} NLO-to-NNLO reweighter program, and can now be read and
 showered by \PYTHIA{} or \HERWIG{}, as it is usually done with LH
 event files generated by the \POWHEGBOX{}.  {It is important to notice that
 the new NNLO weight attached to each event is written \emph{after} the
@@ -346,7 +356,7 @@ starts with the text
   weight,renfact,facfact,pdf1,pdf2}\vspace{3mm}\\
 %
 followed by a weight and other information. In a LH file obtained
-with the {\tt MiNNLO} reweighter, the names of the {\tt DYNNLO-output} files are
+with the {\tt minnlo} reweighter, the names of the {\tt DYNNLO-output} files are
 appended at the end of this line, and the NNLO weight to be used is
 the first number appearing, which will obviously be different from the
 original weight contained in {\tt ZJMiNLO-eventfile}. This different
@@ -367,13 +377,13 @@ The conservative ansatz we recommend in estimating errors (the one
 employed in ref.~\cite{Hamilton:2013fea,Karlberg:2014qua}) is that the  $\mur$ and
 $\muf$ scales in the NNLO and NLO inputs should be varied in a fully
 independent way. In doing so we regard the uncertainties in the
-normalisations of distributions, as being independent of the respective
-uncertainties in the shapes --- at least in the region covered by the
-profile function, $h(\pt)$, i.e. that which includes the low $\pt$
-domain.  The former are determined
-by the \DYNNLO{} program, while the latter are due to
+normalisations of distributions as being independent of the respective
+uncertainties in the shapes, at least in the region covered by the
+profile function $h(\pt)$, i.e. in the low $\pt$
+domain. Normalisation uncertainties are determined
+by the \DYNNLO{} program, while shape uncertainties are due to
 \ZJMINLO{}. Outside of the low $\pt$ region, the uncertainty is given by the
-standard \ZJMINLO{} computation (which uses in that region $\mur=\muf=\pt$ for the central scale choice).
+standard \ZJMINLO{} computation (which uses in that region $\mur=\muf=\pt$ as central scale choice).
 
 In order to compute an uncertainty band, one first needs to have
 obtained multiple outputs from \DYNNLO{} and \ZJMINLO{} with different $\mur$
@@ -387,8 +397,8 @@ straightforwardly adapted to the more general case of a ``7x7 pts''
 scale variation, or variation thereof.
 
 In the ``3x3 pts'' case, the needed inputs are 3 histogram files from
-\DYNNLO{}, which we will call {\tt DYNNLO-outputfile-11.top}, {\tt
-  DYNNLO-outputfile-HH.top} and {\tt DYNNLO-outputfile-22.top}, for
+\DYNNLO{}, which we will call {\tt DYNNLO-outputfile-HH.top}, {\tt
+  DYNNLO-outputfile-11.top} and {\tt DYNNLO-outputfile-22.top}, for
 values of $\mur=\muf=\{m_Z/2,m_Z,2m_Z\}$ respectively.  Similarly,
 the user needs to have obtained a LH file from \ZJMINLO{} where 3
 weights are associated to each event. This file has to be obtained
@@ -445,10 +455,10 @@ Note that \POWHEGBOX{} ships with Pythia6.4.25 as standard. It is straightforwar
 For Pythia8 the user has to compile it himself and then set the {\tt PYTHIA8LOCATION} appropriately. 
 
 \section{Suggested citations}
-If you use this code please cite the inclusive Drell Yan production
-\NNLOPS{} paper \cite{Karlberg:2014qua} and the \ZJMINLO{} paper which
+If you use this code please cite the inclusive Drell-Yan production
+\NNLOPS{} paper \cite{Karlberg:2014qua} and the \VJMINLO{} paper which
 precedes and lays much of the foundations for it \cite{Hamilton:2012rf}.
-The \NNLOPS{} simulation fundamentally relies on the NNLO Drell Yan boson
+The \NNLOPS{} simulation fundamentally relies on the NNLO Drell-Yan boson
 production calculation of refs.~\cite{Catani:2009sm},
 and so these works should also be cited.
 
@@ -463,7 +473,7 @@ to existing \DYNNLO{} and \POWHEGBOX{} code used to produce \NNLOPS{} events.
 \subsection{DYNNLO\label{sec:DYNNLOcode}}
 \begin{itemize}
 
-\item {\tt{makefile}} ({\tt{HNNLO-makefile}})
+\item {\tt{makefile}} ({\tt{DYNNLO-makefile}})
   \begin{itemize}
   \item The \DYNNLO{} {\tt{makefile}} is modified by
     prepending {\tt{\$(DYNNLOHOME)/dynnlo-patches}} to
@@ -479,7 +489,7 @@ to existing \DYNNLO{} and \POWHEGBOX{} code used to produce \NNLOPS{} events.
   \begin{itemize}
   \item The {\tt{mtop}} subroutine, which outputs the \DYNNLO{} histograms
     to a text file, has undergone a minor modification so as to have the
-    same format as the \ZJMINLO{} histogram output, to ease comparisons
+    same format as the \VJMINLO{} histogram output, to ease comparisons
     and for use in the reweighting program.
   \end{itemize}
 
@@ -488,7 +498,7 @@ to existing \DYNNLO{} and \POWHEGBOX{} code used to produce \NNLOPS{} events.
   \item This file contains the values of numerous physical constants in
     \DYNNLO{} e.g. Fermi's constant $G_{F}$, etc.  We have edited all
     parameters in this file to have agreement with the corresponding
-    \ZJMINLO{} default settings.
+    \VJMINLO{} default settings.
   \end{itemize}
 
 \item {\tt{plotter.f}}
@@ -496,12 +506,12 @@ to existing \DYNNLO{} and \POWHEGBOX{} code used to produce \NNLOPS{} events.
   \item This file contains an example analysis for \DYNNLO{} by
     default.  We have modified this analysis  to produce
     three-dimensional histograms. Also a number of distributions relevant for phenomenology is being filled.
-    The three-dimension histogram range has been set to
+    The three-dimensional histogram range has been set to
     $-5<y<5$, $-\pi/2<a_{mll}<\pi/2$ and $0<\theta_l<\pi$. The distributions have 25 bins in each direction. These values may be altered by
     the user as desired, by editing the relevant booking
     subroutine call. However, in this case one must take care to
     modify the relevant \POWHEGBOX{} analysis file ({\tt{pwhg\_analysis-release.f}}) used by the
-    reweighting code, under the {\tt{Zj/DYNNLOPS/ZNNLOPS/Reweighter}} directory.
+    reweighting code, under the {\tt{Vj/DYNNLOPS/VNNLOPS/Reweighter}} directory.
   \end{itemize}
 
 \item {\tt{setup.f}}
@@ -514,7 +524,7 @@ to existing \DYNNLO{} and \POWHEGBOX{} code used to produce \NNLOPS{} events.
   \item Originally the {\tt{writeinfo}} subroutine in this file copied
     the contents of the input file used in running the program, plus the
     cross section, as a series of comments to the top of the histogram
-    output file. In order to have a simple uniform format for the \ZJMINLO{}
+    output file. In order to have a simple uniform format for the \VJMINLO{}
     and \DYNNLO{} we removed these comments (the bulk of which was simply
     a copy of the input file used to run the program).
   \end{itemize}
@@ -526,7 +536,7 @@ to existing \DYNNLO{} and \POWHEGBOX{} code used to produce \NNLOPS{} events.
 
 \item {\tt{coupling.f}}
   \begin{itemize}
-  \item We added a printout to the screen of various parameters, to make it easier to compare with the output of \ZJMINLO{}.  
+  \item We added a printout to the screen of various parameters, to make it easier to compare with the output of \VJMINLO{}.  
   \end{itemize}
 
 \item {\tt{boost.f}}
@@ -536,7 +546,7 @@ to existing \DYNNLO{} and \POWHEGBOX{} code used to produce \NNLOPS{} events.
 
 \item {\tt{auxiliary.f,pwhg\_bookhist-multi.f,pwhg\_bookhist-new.f,pwhg\_book-multi.h}, {\tt pwhg\_bookhist-new.h},pwhg\_math.h}
   \begin{itemize}
-  \item These files contains the routines to fill histograms, to have a consistent output between \DYNNLO{} and \ZJMINLO{}. 
+  \item These files contains the routines to fill histograms, to have a consistent output between \DYNNLO{} and \VJMINLO{}. 
   \end{itemize}
 
 
